--- a/Information Theory/sections/sub/4.2 - Elias codes.tex
+++ b/Information Theory/sections/sub/4.2 - Elias codes.tex
@@ -1,18 +1,17 @@
 \documentclass{subfiles}
 \begin{document}
-    When we talk about Elias code we refer, generally, 
-        to two codes (the \emph{gamma} code and the \emph{delta} code),
-        proposed by \emph{Peter Elias} in \cite{elias1975}.
+    When referring to the Elias code, we generally mean two codes: the 
+    \emph{gamma} code and the \emph{delta} code, both proposed by 
+    \emph{Peter Elias} in \cite{elias1975}.
 
-    Before we start talking about the codes,
-        let us define some notation useful to understand what follows.
-        Let \(x \text{ be an Integer, and let } B(x)\) be its binary representation.
-        We define \(\abs[B(x)]\) as the number of bits needed to represent \(x\).
-        \note{One can also think of \(\abs[B(x)]\) as the length of \(B(x)\)}
+    Before introducing the codes, it is useful to define some notation. 
+    Let \(x\) be an integer, and let \(B(x)\) denote its binary representation. 
+    We define \(\abs{B(x)}\) as the number of bits required to represent \(x\). 
 
     \subsubsection{Gamma code}
     \subfile{../subsub/4.2.1 - Gamma code}
 
     \subsubsection{Delta code}
     \subfile{../subsub/4.2.2 - Delta code}
+    \clearpage
 \end{document}
