--- a/Information Theory/extra/Bib/other.bib
+++ b/Information Theory/extra/Bib/other.bib
@@ -12,3 +12,15 @@
   year         = {2016},
   doi          = {10.4230/LIPICS.CPM.2016.23},
 }
+
+@inproceedings{ferragina2000,
+  author       = {Paolo Ferragina and
+                  Giovanni Manzini},
+  title        = {Opportunistic Data Structures with Applications},
+  booktitle    = {41st Annual Symposium on Foundations of Computer Science, {FOCS} 2000,
+                  Redondo Beach, California, USA, November 12-14, 2000},
+  pages        = {390--398},
+  publisher    = {{IEEE} Computer Society},
+  year         = {2000},
+  doi          = {10.1109/SFCS.2000.892127},
+}
