--- a/Information Theory/extra/TikZ/Figure 1 - Example of Huffman encoding.tex
+++ b/Information Theory/extra/TikZ/Figure 1 - Example of Huffman encoding.tex
@@ -4,51 +4,55 @@
         \centering
         \begin{subfigure}{0.45\textwidth}
             \centering
-            \begin{tikzpicture}[
-                    every node/.style={draw, circle, minimum size=0.1cm},
+            \begin{tikzpicture}
+                [
+                    treeNode/.style={draw, circle, minimum size=0.0625cm},
                     scale=0.5
                 ]
-                \node [fill=rpGold] (root) at (0, 0) {};
-                \foreach \symb/\pos in {a/-2, c/-1, b/0, d/1, e/2}{
-                    \node (\symb) at (\pos, -4) [label=below:\symb] {};
+                \node [fill=rpGold, treeNode] (root) at (0, 0) {};
+                \foreach \symb/\pos in {1/-2, 3/-1, 2/0, 4/1, 5/2}{
+                    \node [treeNode] (\symb) at (\pos, -4) {};
+                    \node at (\pos, -4.75) [font=\small\ttfamily] {\symb};
                 }
 
-                \node [fill=rpIris] (m1) at (1.5, -3) {};
-                \node [fill=rpFoam] (m2) at (1, -2) {};
-                \node [fill=rpPine] (m3) at (0.5, -1) {};
+                \node [fill=rpIris, treeNode] (m1) at (1.5, -3) {};
+                \node [fill=rpFoam, treeNode] (m2) at (1, -2) {};
+                \node [fill=rpPine, treeNode] (m3) at (0.5, -1) {};
 
-                \draw (a) -- (root) -- (m3);
-                \draw (c) -- (m3) -- (m2);
-                \draw (b) -- (m2) -- (m1);
-                \draw (d) -- (m1) -- (e);
+                \draw (1) -- (root) -- (m3);
+                \draw (3) -- (m3) -- (m2);
+                \draw (2) -- (m2) -- (m1);
+                \draw (4) -- (m1) -- (5);
             \end{tikzpicture}
-            \caption{}
-            \label{Fig:2.a}
+            \phantomcaption \label{Fig:1.a}
         \end{subfigure}
         \begin{subfigure}{0.45\textwidth}
             \centering
-            \begin{tikzpicture}[
-                    every node/.style={draw, circle, minimum size=0.125cm},
+            \begin{tikzpicture}
+                [
+                    treeNode/.style={draw, circle, minimum size=0.0625cm},
                     scale=0.5
                 ]
-                \node [fill=rpGold] (root) at (0, 0) {};
-                \foreach \symb/\pos in {a/-2, c/-1, b/0, d/1, e/2}{
-                    \node (\symb) at (\pos, -4) [label=below:\symb] {};
+                \node [fill=rpGold, treeNode] (root) at (0, 0) {};
+                \foreach \symb/\pos in {1/-2, 3/-1, 2/0, 4/1, 5/2}{
+                    \node [treeNode] (\symb) at (\pos, -4) {};
+                    \node at (\pos, -4.75) {\symb};
                 }
 
-                \node [fill=rpIris] (m1) at (1.5, -3) {};
-                \node [fill=rpFoam] (m2) at (1, -2) {};
-                \node [fill=rpPine] (m3) at (-1, -2) {};
+                \node [fill=rpIris, treeNode] (m1) at (1.5, -3) {};
+                \node [fill=rpFoam, treeNode] (m2) at (1, -2) {};
+                \node [fill=rpPine, treeNode] (m3) at (-1, -2) {};
 
                 \draw (m3) -- (root) -- (m2);
-                \draw (a) -- (m3) -- (c);
-                \draw (b) -- (m2) -- (m1);
-                \draw (d) -- (m1) -- (e);
+                \draw (1) -- (m3) -- (3);
+                \draw (2) -- (m2) -- (m1);
+                \draw (4) -- (m1) -- (5);
             \end{tikzpicture}
-            \caption{}
-            \label{Fig:2.b}
+            \phantomcaption \label{Fig:1.b}
         \end{subfigure}
-        \caption{Huffman trees for the source \(S\).}
-        \label{Fig:2}
+        \caption{Huffman trees for the source \(S\). (\subref{Fig:1.a})
+        (on the left) is obtained by merging \(c\) and \(y\) to form \(z\); 
+        (\subref{Fig:1.b}) (on the right) merges \(a\) an \(c\) instead.}
+        \label{Fig:1}
     \end{figure}
 \end{document}
