--- a/Information Theory/sections/sub/2.1 - HE the algorithm.tex
+++ b/Information Theory/sections/sub/2.1 - HE the algorithm.tex
@@ -1,6 +1,6 @@
 \documentclass{subfiles}
 \begin{document}
-    We treat the binary case; the extension to the general case is immediate.
+    We consider the binary case; the extension to the general case is straightforward.
     Let 
     \[
         S = \begin{pmatrix}
@@ -8,24 +8,21 @@
             p_{1} & p_{2} & \cdots & p_{n} 
         \end{pmatrix}
     \]
-    be a source, such that the probabilities are sorted non-increasingly.
-    Denote by \(R(S)\) the \emph{reduced soource}, 
-        obtained by replacing the two least common symbols from \(S\),
-        with one whose probabily is the sum of those of the replaced symbols.
-        This means 
+    denote a source with probabilities arranged in non-increasing order.
+    Define \(R(S)\) as the \emph{reduced source}, 
+        obtained by replacing the two least probable symbols in \(S\)
+        with a single symbol whose probability is the sum of the merged symbols:
         \[
             R(S) = \begin{pmatrix}
                 s_{1} & s_{2} & \cdots & (s_{n - 1}, s_{n}) \\ 
                 p_{1} & p_{2} & \cdots & p_{n - 1} + p_{n} \\
             \end{pmatrix}
         \]
-    Assume \(C_{R}\) to be a binary prefix code for \(R(S)\),
-        and let \(z\) be the codeword associated to the merged symbols \((s_{n - 1}, s_{n})\).
-    Then, a prefix code \(C\) for \(S\) can be obtained by \(C_{R}\) by assigning 
-        to the i-th symbol of \(S\) the i-th codeword in \(C_{R}\),
-        for \(i \le n - 2\). 
-        The codeword for \(s_{n - 1} \text{ and } s_{n}\) are simply 
-        \(z0 \text{ and } z1\) respectively.
+    Let \(C_{R}\) denote a binary prefix code for \(R(S)\), 
+        and let \(z\) be the codeword assigned to the merged symbol \((s_{n - 1}, s_{n})\).
+    A prefix code \(C\) for \(S\) can then be obtained from \(C_{R}\) by assigning 
+        the \(i\)-th symbol of \(S\) the \(i\)-th codeword in \(C_{R}\) for \(i \le n - 2\). 
+        The codewords for \(s_{n - 1}\) and \(s_{n}\) are \(z0\) and \(z1\), respectively.
 
     \clearpage 
     \subsubsection{The encoding}
@@ -34,9 +31,6 @@
     \subsubsection{The decoding}
     \subfile{../subsub/2.1.2 - Huffman decoding}
 
-    \subsubsection{Exercises}
-    \subfile{../subsub/2.1.3 - Huffman exercises}
-
     \subsubsection{Adaptive Huffman}
-    \subfile{../subsub/2.1.4 - Adaptive Huffman}
+    \subfile{../subsub/2.1.3 - Adaptive Huffman}
 \end{document}
