--- a/Information Theory/sections/sub/3.1 - AC encoding.tex
+++ b/Information Theory/sections/sub/3.1 - AC encoding.tex
@@ -1,77 +1,53 @@
 \documentclass{subfiles}
-\begin{document}
-    The \gls{ac} encoding is pretty straightforward,
-        as summarized in the steps below.
-    Let \(\omega\) be the text to encode and let's assume the alphabet,
-        alongside the probabities, is know. Then:
+\begin{document} 
+    The AC encoding is relatively straightforward, as summarized in the steps below.
+    Let \(\omega\) be the text to encode, and assume that the alphabet
+        and corresponding probabilities are known. Then:
         \begin{enumerate}
-            \item We start by initializing the range \([0, 1]\).
+            \item Initialize the range \([0, 1]\).
+
             \item For each symbol in \(\omega\):
                 \begin{enumerate}
                     \item Divide the current range into \(n\) intervals 
-                        (n the size of the alphabet), 
-                        each proportional to the probabities of the symbols.
-                    \item Select as current subinteval the one corresponding to the symbol
-                        that is begin analyzed.
+                        (\(n\) being the size of the alphabet), 
+                        each proportional to the probabilities of the symbols.
+
+                    \item Select as the current subinterval the one corresponding to the symbol
+                        being analyzed.
                 \end{enumerate}
-            \item Output the binary representation\footnotemark[1] of the lowerbound of the last subinteval.
+            \item Output the binary representation\footnotemark of the midpoint of the last subinterval.
         \end{enumerate}
-        \begin{example*}
-            Let \(\omega = abac\) and let \(S = \set{a, b, c}\)
-            with probabilities \(\set*{\tfrac{1}{2}, \tfrac{1}{4}, \tfrac{1}{4}}\).
+        \footnotetext{We assume the reader is familiar with representing fractional numbers in binary.}
 
-            By applying the above steps, we get:
-            \begin{description}
-                \item [\textbf{Step 1.}] We initialize the range \([0, 1]\).
-                \item [\textbf{Step 2.}] Let us consider each iteraction,
-                    each step can be observed in \emph{Figure \ref{Fig:3}}.
-                    We read ``a'' thus, we select the range \([0, \nicefrac{1}{2}]\).
-                    We proceed to updated the ranges, 
-                    and repeat the process until the end of the text.
-                    \subfile{../../extra/TikZ/Figure 2 - AC encoding}
-
-                \item [\textbf{Step 3.}] We return the mid value of the last range.
-            \end{description}
-        \end{example*}
-        \footnotetext[1]{We assume the reader knows how fractional numbers are represented in binary.}
+        Algorithmically, this procedure can be implemented via the procedure shown in \emph{Figure \ref{Fig:3}}.
         \clearpage
-        Algorithmically speaking, we simply apply the following code.
         \subfile{../../extra/TikZ/Figure 3 - AC encoding snippet}
 
-        How many bits do we need to represent the encoding? 
-        From the code in \emph{Figure \ref{Fig:4}},
-            we can deduce that the size of the final range is given by 
+        \begin{example*}
+            Let \(\omega = abac\) and \(S = \set{a, b, c}\)
+            with probabilities \(\set*{\sfrac{1}{2}, \sfrac{1}{4}, \sfrac{1}{4}}\).
+
+            By applying the above steps, we obtain:
+            \begin{description}
+                \item [\textbf{Step 1.}] Initialize the range \([0, 1]\).
+
+                \item [\textbf{Step 2.}] Consider each iteration; 
+                    each step is illustrated in \emph{Figure \ref{Fig:4}}.
+                    We read ``a'', selecting the range \([0, \sfrac{1}{2}]\).
+                    We then update the ranges and repeat the process until the end of the text.
+                    \subfile{../../extra/TikZ/Figure 4 - Example of AC encoding.tex}
+
+                \item [\textbf{Step 3.}] Return the midpoint of the last range.
+            \end{description}
+        \end{example*}
+
+        How many bits are required to represent the encoding? 
+        From the code in \emph{Figure \ref{Fig:3}},
+            the size of the final range is given by 
             \[
-                range_{n} = \prod_{i = 1}^{n}{Prob[S[i]]}
+                range_{n} = \prod_{i = 1}^{n}{Prob[S[i]]},
             \]
-            from which we can derive that the outpus size is indipendent of the 
-            string symbols permutation.
-        Then by the above remark, and the following results, 
-            we can deduce that we need \(l_{n} + \tfrac{s_{n}}{2}\) bits,
-            where \(l_{n} \text{ and } s_{n}\) are, respectively,
-            the last two values of \lstinline{low} and \lstinline{high} in the code above.
-        \begin{lemma*}
-            Let \(x = 0.b_{1}b_{2}\ldots\) be the binary representation of a real number.
-            Then, it's truncation to the first \(d\) bits is also a real number,
-        \end{lemma*}
-        \begin{proof*}
-            Let's observe that 
-            \[
-                x - trunc_{d}(x) = \sum_{i = 1}^{\infty}{b_{d + i} 2^{-(d + i)}}
-                \le \sum_{i = 1}^{\infty}{1 * 2^{-(d + i)}} 
-                =2^{-d} \sum_{i = 1}^{\infty}{2^{-i}} = 2^{-d}
-            \]
-            Therefore, 
-            \[
-                x - trunc_{d}(x) \le 2^{-d} \iff x - d^{-d} \le trunc_{d}(x)
-            \]
-        \end{proof*}
-        \begin{corollary*}
-            Given \(x \in [low, high]\) its truncation to the first
-            \(\ceil[\log \tfrac{2}{high - low}]\) falls within the range.
-        \end{corollary*}
-        \begin{proof*}
-            It follows by the above \emph{Lemma} putting 
-                \(d = \ceil[\log \tfrac{2}{high - low}]\).
-        \end{proof*}
+            from which it follows that the output size is independent of the 
+            permutation of the string symbols.
+        It can be shown that \(l_{n} + \sfrac{s_{n}}{2}\) bits suffice our needs.
 \end{document}
