--- a/Information Theory/sections/sub/4.1 - IE simple approaches.tex
+++ b/Information Theory/sections/sub/4.1 - IE simple approaches.tex
@@ -1,14 +1,16 @@
 \documentclass{subfiles}
 \begin{document}
-    One of the simplest approch is to use the binary reprentation of the given integers,
-    but there's an issue: such reprentation is not prefix free.
+    One of the simplest approaches is to employ the binary representation of the 
+    given integers. However, there is a limitation: such a representation is not 
+    prefix-free.
 
-    A more valid, but still not reasonable on its own, is the so called \emph{unary encoding}.
-    Briefly, given \(x\) an integer we encode it as a sequence of \(x - 1\) 0s followed by a 1.
-    It obvious that such reprentation is indeed prefix free, 
-        but it's not reasonable -- the higher the integer, 
-        the higher is the number of bits needed for its reprentation. 
-    
-    Clearly we needs something else. Even though there's plenty of codes to encode integers, 
-    the following sections focus on the \emph{Elias codes} and the \emph{Fibonaci codes}. 
+    A more formally valid, though still not efficient on its own, method is the 
+    so-called \emph{unary encoding}. Specifically, given an integer \(x\), we 
+    encode it as a sequence of \(x - 1\) zeros followed by a one. It is evident 
+    that this representation is prefix-free; however, it is not practical, as the 
+    number of bits required grows linearly with \(x\).
+
+    Clearly, an alternative is required. Although numerous codes exist for 
+    encoding integers, the following sections concentrate on the \emph{Elias codes} 
+    and the \emph{Fibonacci codes}.
 \end{document}
