--- a/Information Theory/sections/sub/4.3 - Fibonacci code.tex
+++ b/Information Theory/sections/sub/4.3 - Fibonacci code.tex
@@ -1,48 +1,60 @@
 \documentclass{subfiles}
 \begin{document}
-    Before we present Fibonacci codes, 
-        let us recall that Fibonacci numbers are defined by the recurrence
-        \[
-            F_{n} = \begin{cases}
-                0, \quad n = 0; \\
-                1, \quad n = 1; \\ 
-                F_{n - 1} + F_{n - 2}, n \ge 2
-            \end{cases}
-        \]
-    Let us also introduce a foundamental result for the existence of Fibonacci codes.
-    \begin{theorem*}[Zackendorf]
-        Any given positive integer can be uniquely wrote
-            as the sum of non consecutive Fibonacci numbers. 
+    Before presenting Fibonacci codes, recall that Fibonacci numbers are defined 
+    by the recurrence
+    \[
+        F_n = 
+        \begin{cases}
+            0, & n = 0; \\
+            1, & n = 1; \\ 
+            F_{n-1} + F_{n-2}, & n \ge 2
+        \end{cases}
+    \]
+
+    We also introduce a fundamental result essential for Fibonacci codes.
+
+    \begin{theorem*}[Zeckendorf]
+        Any positive integer can be uniquely expressed as the sum of 
+        non-consecutive Fibonacci numbers.
     \end{theorem*}
 
-    Using the above theorem, we can constuct a code that efficiently encodes integers.
-    Let \(n\) be a positive integer, we encode it as follow:
-        \begin{enumerate}
-            \item Find the greatest Fibonacci number lower or equal to \(n\).
-            \item Say it was the i-th Fibonacci number, subtract it from \(n\)
-                and keep trace of the remainder. Set the (i-1)-th bit to 1.
-                (The left most bit has index 0).
-            \item Reapet the above steps by substituting \(n\) with the remainder,
-                until it's 0.
-            \item Append an addiotional 1 to the right of the codeword.
-        \end{enumerate}
+    Using this theorem, we can construct a code that efficiently encodes 
+    integers. Let \(n\) be a positive integer. The encoding procedure is as 
+    follows:
+    \begin{enumerate}
+        \item Find the largest Fibonacci number less than or equal to \(n\).
 
-        \begin{example*}
-            Let \(n = 73\), it's easy to se that it can be wrote as
-                \(F_{10} + F_{7} + F_{5}\). From which by the above steps,
-                we get that \(n\) is encode as \(0001010011\).
-        \end{example*}
+        \item Suppose it is the \(i\)-th Fibonacci number. Subtract it from 
+              \(n\) and record the remainder. Set the \((i-1)\)-th bit to 1 
+              (the leftmost bit has index 0).
 
-    For what regards the decoding, 
-        we simply remove the additional 1 at the right of the codeword,
-        and starting from the left side we replace the i-th 1 with the 
-        (i + 1)-th Fibonacci number, then sum everything.
-        \begin{example*}
-            Let us decode \(0001010011\). 
-                As said, we remove the extra bit at the right, 
-                from which we get \(000101001\).
-            Then, we replace the i-th 1 with the (i + 1)-th Fibonacci number. 
-            Thus, we get \( F_{4 + 1} + F_{6 + 1} + F_{9 + 1}\),
-                which basically is \(F_{5} + F_{7} + F_{10} = 73\).
-        \end{example*}
+        \item Repeat the above steps, replacing \(n\) with the remainder, 
+              until it becomes 0.
+
+        \item Append an additional 1 to the right end of the codeword.
+    \end{enumerate}
+
+    \begin{example*}
+        For \(n = 73\), it can be expressed as 
+        \(F_{10} + F_7 + F_5\). Applying the above procedure, the Fibonacci 
+        encoding of \(n\) is 
+        \[
+            0001010011.
+        \]
+    \end{example*}
+
+    Decoding is straightforward. Remove the additional 1 at the right end of 
+    the codeword. Then, from left to right, replace the \(i\)-th 1 with the 
+    \((i+1)\)-th Fibonacci number, and sum all the corresponding Fibonacci 
+    numbers.
+
+    \begin{example*}
+        To decode \(0001010011\), first remove the extra bit, obtaining 
+        \(000101001\). Then, replace the \(i\)-th 1 with the \((i+1)\)-th 
+        Fibonacci number, resulting in
+        \[
+            F_{5} + F_{7} + F_{10} = 73.
+        \]
+    \end{example*}
+    \clearpage
 \end{document}
